# doc-flash

./: .env.example  LICENSE  README.md  pyproject.toml
notebooks/: gemini_doc_demo.ipynb
src/doc_flash/: __init__.py  main.py
src/doc_flash/api/: dependencies.py  routes.py  schemas.py
src/doc_flash/core/: config.py
src/doc_flash/services/: __init__.py  documentation_service.py  prompts.py  provider_factory.py
src/doc_flash/services/providers/: base.py  gemini.py  mock.py
